--- a/app.json
+++ b/app.json
@@ -1,9 +1,9 @@
 
 {
-    "name": "Ban All Bot",
-    "description": "FUCK ALL HEATERS.... ",
-    "repository": "https://github.com/Badnam-xD/badnam",
-    "logo": "https://telegra.ph/file/687b29db6d35642671c1a.jpg",
+    "name": "A Group Destroyer !!!",
+    "description": "Group And Channel's On Mah Dick Ever !!!",
+    "repository": "https://github.com/Mass-Action/Tgactionbot",
+    "logo": "https://telegra.ph/file/ba38ba16fdf2f6e45fa4c.png",
     "keywords": [
         "python",
         "telegram"
